--- a/sass/layout/_banner.scss
+++ b/sass/layout/_banner.scss
@@ -5,7 +5,7 @@
     background-image: linear-gradient(to right,
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)),
-      url(img/background.jpg);
+      url(/img/background.jpg);
     margin-bottom: 94px;
   }
   
