--- a/css/main.css
+++ b/css/main.css
@@ -170,7 +170,7 @@ body {
   margin-top: 0;
   text-align: center;
   height: 600px;
-  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(/img/background.jpg);
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../img/background.jpg);
   margin-bottom: 94px;
 }
 
