--- a/css/main.css
+++ b/css/main.css
@@ -46,7 +46,7 @@ body {
 }
 
 .header-webstudio {
-  color: rgb(0, 0, 0);
+  color: #000000;
 }
 
 .header-web {
@@ -343,7 +343,7 @@ body {
 
 .send-button:hover {
   transform: scale(1.05);
-  background-color: #188ce8;
+  background-color: #2196f3;
 }
 
 .checkbox {
@@ -692,15 +692,15 @@ body {
 }
 
 .footer-studio {
-  color: white;
+  color: #fff;
 }
 
 .footer-address {
-  color: white;
+  color: #fff;
 }
 
 .footer-contact {
-  color: white;
+  color: #fff;
 }
 
 .footer-list {
