--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,5 @@
 @import "base/reset";
+@import "utils/variables.scss";
 @import "utils/container";
 @import "layout/header";
 @import "layout/banner";
