--- a/sass/layout/_banner.scss
+++ b/sass/layout/_banner.scss
@@ -20,7 +20,7 @@
   
   .btn-open {
     color: white;
-    background-color: #2196f3;
+    background-color: $maincolour;
     font-weight: 700;
     font-size: 16px;
     margin: 0 auto;
