--- a/sass/layout/_descriptionSection.scss
+++ b/sass/layout/_descriptionSection.scss
@@ -22,7 +22,7 @@
     display: flex;
     height: 120px;
     width: 270px;
-    background-color: #f5f4fa;
+    background-color: $teamsection_and_svg-div;
     justify-content: center;
     align-items: center;
     margin-bottom: 30px;
