--- a/sass/layout/_modal.scss
+++ b/sass/layout/_modal.scss
@@ -65,7 +65,7 @@
   .modal-heading {
     font-weight: 700;
     font-size: 20px;
-    color: #212121;
+    color: $header-link_modal-heading_header-link;
   }
   
   .registration-label {
@@ -82,7 +82,7 @@
     display: flex;
     font-size: 12px;
     font-weight: 400;
-    color: #757575;
+    color: $contacts_modalp_and_descriptions;
     margin-top: 10px;
     align-self: flex-start;
     margin-left: 40px;
@@ -106,13 +106,13 @@
   }
   
   .registration-label>textarea:hover {
-    border: 1px solid #2196f3;
+    border: 1px solid $maincolour;
   }
   
   .registration-label:hover>svg,
   .registration-label:hover {
-    fill: #2196f3;
-    border: 1px solid #2196f3;
+    fill: $maincolour;
+    border: 1px solid $maincolour;
   }
   
   .registration-label:hover>svg {
@@ -126,18 +126,18 @@
   }
   
   .registration-label>svg:hover {
-    fill: #2196f3;
+    fill: $maincolour;
   }
   
   .contract-span {
-    color: #2196f3;
+    color: $maincolour;
     text-decoration: underline;
   }
   
   .send-button {
     height: 50px;
     width: 200px;
-    background-color: #2196f3;
+    background-color: $maincolour;
     border: none;
     border-radius: 4px;
     color: #fff;
@@ -147,7 +147,7 @@
   
   .send-button:hover {
     transform: scale(1.05);
-    background-color: #188ce8;
+    background-color: $maincolour;
   }
   
   .checkbox {
@@ -175,6 +175,6 @@
   }
   
   .btn:hover>.cross {
-    fill: #2196f3;
+    fill: $maincolour;
   }
   
