--- a/sass/layout/_portfolioButtons.scss
+++ b/sass/layout/_portfolioButtons.scss
@@ -15,11 +15,11 @@
     margin-right: 8px;
     font-size: 16px;
     border-radius: 5px;
-    background-color: #f0f0f0;
+    background-color: $portfolio-buttons;
   }
   
   .portfolio-button:hover {
-    background-color: #2196f3;
+    background-color: $maincolour;
     color: #fff;
     box-shadow: 0 10px 10px -5px rgba(0, 0, 0, 0.3);
     transition-property: background-color;
