--- a/sass/layout/_descriptionSection.scss
+++ b/sass/layout/_descriptionSection.scss
@@ -19,12 +19,10 @@
     width: 70px;
   }
   .svg-div {
-    display: flex;
     height: 120px;
     width: 270px;
     background-color: $teamsection_and_svg-div;
-    justify-content: center;
-    align-items: center;
+    @extend %flex-center;
     margin-bottom: 30px;
   }
   .main-list-item {
