--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,3 +1,5 @@
+@import "utils/placeholders";
+@import "utils/mixin.scss";
 @import "base/reset";
 @import "utils/variables.scss";
 @import "utils/container";
