--- a/sass/layout/_clientsSection.scss
+++ b/sass/layout/_clientsSection.scss
@@ -16,7 +16,7 @@
     @extend %flex-center;
     height: 92px;
     width: 170px;
-    border: 1px solid $socialmedia_and_clients;
+    @include border($socialmedia_and_clients);
   }
   
   .clients-list-item:hover>svg {
@@ -28,7 +28,7 @@
   }
   
   .clients-list-item:hover {
-    border: 1px solid $maincolour;
+    @include border($maincolour);
     transition-property: border;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
