--- a/css/main.css
+++ b/css/main.css
@@ -183,8 +183,6 @@ body {
   background-color: #2196f3;
   font-weight: 700;
   font-size: 16px;
-  margin: 0 auto;
-  display: block;
   width: 216px;
   height: 50px;
   border-radius: 5px;
@@ -653,7 +651,6 @@ body {
   font-weight: 400;
   font-size: 14px;
   display: flex;
-  flex-direction: row;
 }
 
 .footer-div {
@@ -796,4 +793,51 @@ body {
   flex-direction: row;
   align-items: center;
   margin-left: 28px;
+}
+
+@media (min-width: 320px) {
+  body {
+    overflow-x: hidden;
+  }
+}
+@media screen and (max-width: 768px) {
+  .photo-section {
+    display: none;
+  }
+}
+@media screen and (max-width: 480px) {
+  .header-menu, .header-contact {
+    display: none;
+  }
+  .banner {
+    margin-top: 0;
+    text-align: center;
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../img/background.jpg);
+    background-size: cover;
+    height: 400px;
+  }
+  .main-heading {
+    padding-top: 118px;
+    font-size: 26px;
+  }
+  .btn-open {
+    font-size: 16px;
+    width: 200px;
+    height: 50px;
+    border-radius: 5px;
+  }
+  .main-list, .main-list-team {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex-wrap: wrap;
+  }
+  .clients-list {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  footer {
+    display: flex;
+    flex-direction: column;
+  }
 }/*# sourceMappingURL=main.css.map */
