--- a/css/main.css
+++ b/css/main.css
@@ -809,6 +809,9 @@ body {
   .header-menu, .header-contact {
     display: none;
   }
+  .container {
+    width: 480px;
+  }
   .banner {
     margin-top: 0;
     text-align: center;
@@ -830,7 +833,6 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    flex-wrap: wrap;
   }
   .clients-list {
     display: flex;
