--- a/sass/utils/_mediarequests.scss
+++ b/sass/utils/_mediarequests.scss
@@ -13,6 +13,9 @@
     .header-menu, .header-contact {
         display: none;
     }
+    .container {
+      width: 480px;
+    }
 
     .banner {
         margin-top: 0;
@@ -42,7 +45,6 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        flex-wrap: wrap;
       }
 
       .clients-list {
